--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,20 @@
   overflow: hidden;
   grid-template-columns: 11rem auto 20rem;
 }
+
+/* Media Queiry tablet view*/
+@media screen and (max-width: 1200px) {
+  .AppGlass {
+    grid-template-columns: 10% 50% auto;
+    overflow-y: scroll;
+  }
+}
+/* Media Queiry  for the mobile view*/
+@media screen and (max-width: 768px) {
+  .AppGlass {
+    grid-template-columns: 1fr !important;
+  }
+  .AppGlass::-webkit-scrollbar {
+    display: none;
+  }
+}
