--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -4,3 +4,22 @@
   width: 95%;
   justify-content: space-evenly;
 }
+/* Media Queiry tablet view*/
+@media screen and (max-width: 1200px) {
+  .RightSide {
+    justify-content: flex-start;
+    margin-top: 3rem;
+  }
+}
+/* Media Queiry  for the mobile view*/
+@media screen and (max-width: 768px) {
+  .RightSide {
+    width: 100%;
+    margin-top: 0;
+  }
+  .RightSide > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
